--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Smort</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="skip">Skip</string>
+    <string name="roundcmplt">Round Complete</string>
+    <string name="correct">Correct</string>
+    <string name="skipped">Skipped</string>
+    <string name="wrong">Wrong</string>
+    <string name="result">Result</string>
+    <string name="retry">Retry</string>
+    <string name="cntinue">Continue</string>
 </resources>
