--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="result">Result</string>
     <string name="retry">Retry</string>
     <string name="cntinue">Continue</string>
+    <string name="checkans"><u>See explaination >></u></string>
 </resources>
