--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="retry">Retry</string>
     <string name="cntinue">Continue</string>
     <string name="checkans"><u>See explaination >></u></string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="login">LOG IN</string>
 </resources>
